fixed alignment of mobile search header

--- a/styles/project/components/_tags-input.scss
+++ b/styles/project/components/_tags-input.scss
@@ -194,6 +194,7 @@ tags-input {
       .tags {
         margin-left: $actions-content-padding;
         margin-right: $actions-content-padding;
+        padding: 0;
       }
 
       .tags .input,
@@ -248,6 +249,7 @@ tags-input {
       }
 
       .host {
+        border-top: none !important;
         border-bottom: 1px solid $border-color-base !important;
       }
 
